bug 1495: "infos" and "errors" blocks are more visible for the "clear" admin theme.
git-svn-id: http://piwigo.org/svn/trunk@5141 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/themes/clear/theme.css
+++ b/admin/themes/clear/theme.css
@@ -8,12 +8,12 @@ input[type="radio"], input[type="checkbox"] { background-color: transparent; }
 INPUT[type="submit"], INPUT[type="reset"]  { color:#666; border: 1px solid #777; background-color: #bbb; padding: 1px 15px; }
 input.rateButton, legend, h3 { color: #777; }
 #theAdminPage h2 { color: #ccc; }
-.content .infos { color: #0a0; border:0; background: transparent url(icon/infos.png) no-repeat left bottom;
-padding:5px 70px 0pt 30px; min-height: 48px; text-align:left; }
+.content .infos { color: #0a0; border:0; background: transparent url(icon/infos.png) no-repeat 5px 5px;
+padding:5px 70px 0pt 30px; min-height: 54px; text-align:left; background-color:#c2f5c2;}
 .content .infos .submit {margin-left:30px;}
-.content .infos li, .content .errors li { list-style-type:none; }
+.content .infos li, .content .errors li { list-style-type:square; }
 .content .errors { color: #f22; border:0; background: transparent url(icon/errors.png) no-repeat left top;
-padding:5px 60px 0pt 30px; min-height: 48px; text-align:left; font-weight:bold; background-position:left top;  }
+padding:5px 60px 0pt 30px; min-height: 54px; text-align:left; font-weight:bold; background-position:5px 5px; background-color: #ffd5dc;}
 #copyright { color:#777; margin:5px auto 0px 240px; text-align:center; 
 padding-bottom: 15px; }
 .header_notes { background: transparent url(icon/note.png) no-repeat right top;
